--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
     backdrop-filter: blur(10px); /* Apply blur effect */
     z-index: 1; /* Ensure it appears above the background */
     text-align: center;
-  
+
   }
   
   .bottom-apps-wrapper {
@@ -155,6 +155,11 @@ body {
     justify-content: center; /* Center icons horizontally */
     align-items: flex-start; /* Align icons to the top of the container */
     margin-top: 10px;
+
+  
+    width: 200%;
+    transition: transform 0.3s ease-in-out;
+    cursor: grab;
   }
   
   
